--- a/src/scss/dashboard/account.scss
+++ b/src/scss/dashboard/account.scss
@@ -123,7 +123,7 @@
         }
         &-info {
             width: 100%;
-            margin-left: 25px;
+            margin: 0 25px;
             overflow: hidden;
             &-name {
                 padding: 0;
@@ -134,6 +134,52 @@
                 font-weight: 700;
                 color: #000000;
                 margin-top: 10px;
+            }
+        }
+        &-rating {
+            min-width: 100px;
+            max-width: 100px;
+            &-head {
+                display: flex;
+                justify-content: center;
+                &-text {
+                    width: fit-content;
+                    text-align: center;
+                    font-size: 12px;
+                    line-height: 27px;
+                    font-weight: 400;
+                    color: #666666;
+                }
+            }
+            &-image {
+                display: flex;
+                justify-content: center;
+            }
+            &-chart {
+                position: relative;
+                margin-top: 15px;
+                width: 100px;
+                height: 100px;
+            }
+            &-info {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                &-title {
+                    font-size: 16px;
+                    line-height: 17px;
+                    font-weight: 700;
+                    color: #000000;
+                    text-align: center;
+                }
+                &-text {
+                    font-size: 10px;
+                    line-height: 17px;
+                    font-weight: 300;
+                    color: #666666;
+                    text-align: center;
+                }
             }
         }
     }
@@ -177,6 +223,7 @@
                     font-size: 14px;
                     font-weight: 500;
                     line-height: 1.5;
+                    text-align: center;
                 }
                 &-link {
                     font-family: "SF Pro Display", "Arial", sans-serif;
@@ -426,16 +473,26 @@
                     height: 100%;
                 }
             }
+            &-info {
+                width: 80%;
+                display: flex;
+            }
             &-text {
                 padding: 0 15px;
-                width: 40%;
+                width: 50%;
+                // max-width: 300px;
                 color: #9a9a9a;
-                &--price {
+                display: flex;
+                &--bold {
                     color: #414141;
                     font-weight: 700;
                 }
+                &--price {
+                    display: none;
+                }
             }
             &--head {
+                width: 80%;
                 &:before {
                     display: none;
                 }
@@ -455,6 +512,7 @@
                 background-color: #f9f9f9;
             }
             &-action {
+                min-width: 120px;
                 color: #9a9a9a;
                 &-change {
                     display: block;
@@ -463,6 +521,7 @@
                 &-remove {
                     display: block;
                     cursor: pointer;
+                    width: fit-content;
                 }
             }
         }
@@ -470,7 +529,7 @@
 }
 
 
-@media (max-width: 1000px) {
+@media (max-width: 1050px) {
     .account {
         &__aside {
             display: none;
@@ -488,7 +547,45 @@
             flex-direction: column;
             align-items: center;
             &-info {
+                order: 1;
                 margin-left: 0;
+                margin-right: 0;
+            }
+            &-rating {
+                margin-top: 30px;
+                min-width: 170px;
+                max-width: 170px;
+                &-head {
+                    &-text {
+                        font-size: 17px;
+                        line-height: 1.3;
+                        &:before {
+                            width: 20px;
+                            height: 20px;
+                            min-width: 20px;
+                            min-height: 20px;
+                            background-size: 20px 20px;
+                        }
+                    }
+                }
+                &-chart {
+                    width: 170px;
+                    height: 170px;
+                    &-svg {
+                        width: 170px;
+                        height: 170px;
+                    }
+                }
+                &-info {
+                    &-title {
+                        font-size: 24px;
+                        line-height: 1.3;
+                    }
+                    &-text {
+                        font-size: 14px;
+                        line-height: 1.3;
+                    }
+                }
             }
         }
         &__settings {
@@ -506,6 +603,16 @@
                 &--head {
                     display: none;
                 }
+                &-info {
+                    display: flex;
+                    flex-direction: column;
+                }
+                &-text {
+                    width: 100%;
+                    &--price {
+                        display: block;
+                    }
+                }
             }
         }
     }
@@ -518,18 +625,22 @@
             padding: 40px 0 0 0;
         }
         &__main {
-            padding: 32px 15px 32px 15px;
+            padding: 32px 15px;
         }
         &__status {
             &-list {
                 &-item {
                     flex-direction: column;
-                    &-text {
-                        text-align: center;
-                    }
                     &-link {
                         margin: 10px 0;
                     }
+                }
+            }
+        }
+        &__services {
+            &-item {
+                &-text {
+                    display: block;
                 }
             }
         }
