--- a/src/scss/dashboard/account.scss
+++ b/src/scss/dashboard/account.scss
@@ -1617,6 +1617,9 @@
                 }
             }
         }
+        &-list {
+            display: none;
+        }
         &-content {
             width: 100%;
             border: 2px dashed #ddd;
@@ -1625,7 +1628,7 @@
                 .account__favorit-content-empty {
                     display: none;
                 }
-                .account__favorit-content-list {
+                .catalog__blogger-list {
                     display: block;
                 }
             }
@@ -1644,243 +1647,6 @@
                     color: #999;
                     font-size: 18px;
                     line-height: 20px;
-                }
-            }
-            &-list {
-                display: none;
-            }
-            &-item {
-                display: flex;
-                justify-content: flex-start;
-                align-items: stretch;
-                width: 100%;
-                margin-bottom: 30px;
-                padding: 50px 30px 25px 35px;
-                background-color: #fff;
-                border-radius: 15px;
-                position: relative;
-                &:hover {
-                    box-shadow: 0 0 30px rgba(255, 229, 0, 0.25);
-                }
-                &-user {
-                    padding: 0 20px 0 0;
-                    display: flex;
-                    align-items: flex-start;
-                    &-avatar {
-                        width: 141px;
-                        height: 141px;
-                        position: relative;
-                        &.online {
-                            .account__favorit-content-item-user-indicator {
-                                &::before {
-                                    border: 1px solid #74dfce;
-                                }
-                                &::after {
-                                    background-color: #74dfce;
-                                }
-                            }
-                        }
-                    }
-                    &-img {
-                        width: 141px;
-                        height: 141px;
-                        border-radius: 50%;
-                        border: 2px solid #74dfce;
-                        box-shadow: 0 0 25px 0 rgba(116, 223, 206, 0.50);
-                    }
-                    &-link {
-                        color: #000;
-                        line-height: 21px;
-                        font-weight: 700;
-                        font-size: 16px;
-                        line-height: 1;
-                        transition: all 300ms ease-in-out;
-                        &:hover {
-                            color: #f04a76;
-                        }
-                    }
-                    &-status {
-                        position: absolute;
-                        display: none;
-                        background-color: #fff;
-                        padding: 10px;
-                        z-index: 4;
-                        width: 100px;
-                        margin-left: 60px;
-                        box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.25);
-                        border-radius: 10px;
-                        color: #000;
-                        text-align: center;
-                        line-height: 15px;
-                        bottom: 100%;
-                        margin-bottom: 3px;
-                        font-size: 13px;
-                        font-weight: 300;
-                    }
-                    &-indicator {
-                        top: 3px;
-                        right: 9px;
-                        width: 0px;
-                        height: 0px;
-                        position: absolute;
-                        &::before {
-                            border: 1px solid #ffe500;
-                            -webkit-transition: .5s;
-                            transition: .5s;
-                            bottom: -25px;
-                            right: 7px;
-                            width: 26px;
-                            height: 26px;
-                            border-radius: 50%;
-                            background-color: transparent;
-                            content: "";
-                            position: absolute;
-                            z-index: 1;
-                        }
-                        &::after {
-                            background-color: #ffe500;
-                            -webkit-transition: .5s;
-                            transition: .5s;
-                            bottom: -20px;
-                            right: 12px;
-                            width: 16px;
-                            height: 16px;
-                            border-radius: 50%;
-                            content: "";
-                            position: absolute;
-                            z-index: 1;
-                        }
-                        &:hover + .account__favorit-content-item-user-status {
-                            display: block;
-                        }
-                    }
-                    &-mobile {
-                        display: none;
-                        margin-top: 7px;
-                        &-text {
-                            font-size: 13px;
-                            line-height: 20px;
-                        }
-                    }
-                }
-                &-service {
-                    width: 20%;
-                    padding: 0 20px 0 0;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: flex-start;
-                    &-text {
-                        color: #b3b0af;
-                        line-height: 1;
-                        font-weight: 600;
-                        white-space: normal;
-                        font-size: 18px;
-                        min-height: 36px;
-                        display: flex;
-                        align-items: flex-end;
-                        &--info {
-                            margin-top: 9px;
-                            font-size: 12.4px;
-                            font-weight: 400;
-                            min-height: unset;
-                        }
-                        &--descr {
-                            color: #b3b0af;
-                            margin-top: 6px;
-                            font-size: 12.4px;
-                            font-weight: 400;
-                            min-height: unset;
-                        }
-                    }
-                }
-                &-date {
-                    width: 15%;
-                    padding: 0 20px 0 0;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: flex-start;
-                    &-text {
-                        color: #b3b0af;
-                        line-height: 1;
-                        font-weight: 600;
-                        white-space: normal;
-                        font-size: 18px;
-                        min-height: 36px;
-                        display: flex;
-                        align-items: flex-end;
-                        &--info {
-                            margin-top: 9px;
-                            font-size: 12.4px;
-                            font-weight: 400;
-                            min-height: unset;
-                        }
-                    }
-                }
-                &-status {
-                    width: 15%;
-                    padding: 0 20px 0 0;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: flex-start;
-                    &-text {
-                        color: #b3b0af;
-                        line-height: 1;
-                        font-weight: 600;
-                        white-space: normal;
-                        font-size: 18px;
-                        min-height: 36px;
-                        display: flex;
-                        align-items: flex-end;
-                        &--info {
-                            margin-top: 9px;
-                            font-size: 12.4px;
-                            font-weight: 400;
-                            min-height: unset;
-                        }
-                    }
-                }
-                &-action {
-                    width: 20%;
-                    display: none;
-                    flex-direction: column;
-                    justify-content: flex-end;
-                    &-button {
-                        width: 183px;
-                        height: 32px;
-                        line-height: 28px;
-                        white-space: nowrap;
-                        padding: 0 10px;
-                        border-radius: 30px;
-                        font-size: 12px;
-                        font-weight: bold;
-                        border: 2px solid #ff0099;
-                        margin-bottom: 12px;
-                        cursor: pointer;
-                        outline: none;
-                        &--message {
-                            color: #000;
-                            background-color: #fff;
-                        }
-                        &--take {
-                            color: #fff;
-                            background-color: #ff0099;
-                        }
-                        &--confirm {
-                            color: #fff;
-                            background-color: #ff0099;
-                            display: none;
-                        }
-                        &:hover,
-                        &:focus {
-                            box-shadow: 10px 10px 25px 0 rgba(0, 0, 0, 0.25%);
-                        }
-                        &:last-child {
-                            margin-bottom: 0;
-                        }
-                    }
-                }
-                &:last-child {
-                    margin-bottom: 0;
                 }
             }
         }
@@ -1937,7 +1703,6 @@
     }
 }
 
-
 @media (max-width: 1200px) {
     .account {
         &__insta {
@@ -1953,6 +1718,20 @@
                 }
             }
         }
+        &__favorit {
+            &-menu {
+                margin-left: 0;
+                &-item {
+                    margin-left: 5px;
+                    margin-right: 5px;
+                }
+            }
+            &-head {
+                &-text {
+                    display: none;
+                }
+            }
+        }
     }
 }
 
@@ -1964,11 +1743,17 @@
         &__content {
             margin-left: 0;
         }
+        &__favorit {
+            &-menu {
+                width: 100%;
+                justify-content: center;
+            }
+        }
     }
 }
 
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
     .account {
         &__main {
             flex-direction: column;
@@ -2092,16 +1877,45 @@
                 }
             }
         }
+        &__favorit {
+            padding: 0;
+            &-menu {
+                &-item {
+                    margin-left: 4px;
+                    margin-right: 4px;
+                    font-size: 12px;
+                }
+            }
+        }
     }
 }
 
 @media (max-width: 600px) {
-    .account__company {
-        &-content {
-            &-item {
-                &-status {
-                    position: unset;
-                    transform: unset;
+    .account {
+        &__company {
+            &-content {
+                &-item {
+                    &-status {
+                        position: unset;
+                        transform: unset;
+                    }
+                }
+            }
+        }
+        &__favorit {
+            padding: 0;
+            &-menu {
+                flex-direction: column;
+                align-items: center;
+                &-item {
+                    min-width: 230px;
+                    margin: 0 0 5px 0;
+                    font-size: 14px;
+                    padding: 5px 20px;
+                    border-radius: 20px;
+                    &:last-child {
+                        margin: 0;
+                    }
                 }
             }
         }
