--- a/src/scss/search-bloggers/filters.scss
+++ b/src/scss/search-bloggers/filters.scss
@@ -128,41 +128,31 @@
             color: #000;
             transition: .3s ease-in-out;
             max-width: 300px;
+            border: 1px solid transparent;
             &:hover {
                 box-shadow: 4px 4px 9px 0 rgba(0, 0, 0, 0.25)
             }
-        }
-        &-link {
-            font-family: "SF Pro Display", "Arial", sans-serif;
-            font-size: 16px;
-            font-weight: 400;
-            text-align: center;
-
-            position: relative;
-            margin-top: 20px;
-            display: block;
-            width: 100%;
-            color: #f04a76;
-            padding-bottom: 5px;
-            max-width: 300px;
-            &:hover {
-                &::after {
-                    width: 20px;
-                    opacity: 1;
-                }
+            &--apply {
+                display: none;
             }
-            &::after {
-                content: '';
-                position: absolute;
-                background-color: #f09;
-                width: 0;
-                height: 2px;
-                bottom: 0;
-                left: 50%;
-                transform: translateX(-50%);
-                opacity: 0;
-                top: 100%;
-                transition: .3s ease-in-out;
+            &--reset {
+                background-color: #fff;
+                border: 1px solid #74dfce;
+            }
+        }
+    }
+}
+
+@media (max-width: 1050px) {
+    .filters {
+        &__footer {
+            &-button {
+                &--apply {
+                    display: block;
+                }
+                &--reset {
+                    margin-top: 10px;
+                }
             }
         }
     }
