--- a/src/scss/search-bloggers/search-bloggers.scss
+++ b/src/scss/search-bloggers/search-bloggers.scss
@@ -3,6 +3,70 @@
     display: flex;
     justify-content: center;
     background: #f7f7f7;
+
+    .catalog-blogger {
+        &__left {
+            display: flex;
+        }
+        &__right {
+
+        }
+        &__sort {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 20px;
+
+            &-menu {
+                margin-top: 10px;
+                margin-left: 0;
+                &-item {
+                    position: relative;
+                    padding-left: 26px;
+                    margin-bottom: 7.5px;
+                }
+            }
+
+            &-text {
+                display: flex;
+                align-items: center;
+            }
+            &-select {
+                margin-left: 10px;
+                width: 210px;
+                .select__list {
+                    z-index: 1;
+                    border: 1px solid #dbdbdb;
+                }
+                .select__head {
+                    font-size: 13px;
+                }
+                .select__container {
+                    border: none;
+                }
+            }
+            &-cross {
+                position: absolute;
+                left: 10px;
+                top: -1px;
+                color: #323232;
+                width: 15px;
+                height: 15px;
+                cursor: pointer;
+                font-size: 20px;
+                font-weight: 400;
+            }
+            &-content {
+                width: 100%;
+            }
+            &-next {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+            }
+        }
+    }
+
+
     &__wrap {
         display: flex;
         width: 1400px;
@@ -15,6 +79,19 @@
         padding: 10px 25px 30px 25px;
         border-radius: 10px;
         background-color: #fff;
+        &-head {
+            display: none;
+            justify-content: space-between;
+            background-color: #ffe600;
+            padding: 15px 25px;
+        }
+        &-title {
+            font-weight: 500;
+            font-size: 20px;
+        }
+        &-cross {
+            font-size: 30px;
+        }
     }
     // &__filters {
 
@@ -58,23 +135,147 @@
             }
         }
     }
+    &__find {
+        // margin-bottom: 10px;
+        &-text {
+            font-family: "SF Pro Display", sans-serif;
+            font-size: 16px;
+            line-height: 27px;
+            font-weight: 300;
+            color: #666;
+        }
+    }
+    &__nav {
+        display: none;
+        background-color: #fff;
+        width: calc(100% - 4px);
+        position: fixed;
+        top: 88px;
+        left: 2px;
+        z-index: 1;
+        box-shadow: 1px 1px 4px;
+        &-item {
+            font-family: "SF Pro Display",Arial,sans-serif;
+            font-size: 16px;
+            font-weight: 500;
+            color: #000;
+            width: 50%;
+            text-align: center;
+            position: relative;
+            padding: 10px 0;
+            &:first-child {
+                &::after {
+                    content: '';
+                    position: absolute;
+                    height: 70%;
+                    left: 100%;
+                    width: 1px;
+                    background-color: #74dfce;
+                    top: 15%;
+                }
+            }
+        }
+    }
 
 }
 
 
 @media (max-width: 1050px) {
     .search-bloggers {
+        &__find-text {
+            display: none;
+        }
         &__wrap {
             display: flex;
             flex-direction: column;
         }
         &__aside {
             width: 100%;
+            &-head {
+                display: flex;
+            }
         }
         &__content {
             max-width: unset;
             padding: 0;
             margin-left: 0;
+        }
+        &__nav {
+            display: flex;
+        }
+        &__aside {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            z-index: 2;
+            border-radius: 0;
+            padding: 0;
+        }
+        .catalog-blogger {
+            &__sort {
+                position: fixed;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                z-index: 2;
+                margin: 0;
+                flex-direction: column;
+                justify-content: flex-start;
+                padding: 0;
+                border: unset;
+                &-content {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    height: 100%;
+                    .filters__footer-button {
+                        margin-bottom: 20px;
+                    }
+                }
+                &-next {
+                    display: flex;
+                    flex-direction: column;
+                }
+                .search-bloggers__aside-head {
+                    width: 100%;
+                }
+            }
+            &__content {
+                display: flex;
+                justify-content: space-between;
+            }
+            &__left {
+                order: 1;
+            }
+        }
+        &__filters {
+            padding: 10px 25px 30px;
+        }
+        & .filters {
+            &__center {
+                max-height: 500px;
+                overflow-y: auto;
+            }
+            &__footer {
+                position: relative;
+                margin-top: 0;
+                &::before {
+                    content: "";
+                    display: block;
+                    height: 20px;
+                    position: absolute;
+                    top: -19px;
+                    position: absolute;
+                    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), #fff 75%);
+                    width: 100%;
+                }
+                &-text {
+                    display: none;
+                }
+            }
         }
     }
 }
