--- a/src/scss/UI/radio.scss
+++ b/src/scss/UI/radio.scss
@@ -16,7 +16,8 @@
     }
     &__input {
         display: none;
-        &:checked + span::after {
+        &:checked + span::after,
+        &[checked] + span::after {
             content: "";
             position: absolute;
             background: #69DDCA;
@@ -31,7 +32,8 @@
             transform: translate(-50%, -50%);
         }
         &--checkbox {
-            &:checked + span::after {
+            &:checked + span::after,
+            &[checked] + span::after {
                 content: "";
                 position: absolute;
                 top: calc(50% + 1px);
@@ -47,7 +49,8 @@
                 transform: rotate(-45deg);
                 border-radius: unset;
             }
-            &:checked + span::before {
+            &:checked + span::before,
+            &[checked] + span::before {
                 content: "";
                 position: absolute;
                 top: 50%;
