--- a/src/scss/dashboard/account.scss
+++ b/src/scss/dashboard/account.scss
@@ -70,6 +70,7 @@
             width: 175px;
             min-width: 175px;
             position: relative;
+            display: flex;
             &-img {
                 width: 170px;
                 height: 170px;
@@ -132,6 +133,7 @@
             }
         }
         &-info {
+            position: relative;
             width: 100%;
             margin: 0 25px;
             overflow: hidden;
@@ -195,12 +197,29 @@
         }
     }
     &__status {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
         &-alert {
             margin-top: 20px;
-            background: rgba(255, 0, 0, 0.5);
-            padding: 18px 20px 15px 20px;
             border-radius: 1.2em;
-            max-width: 630px;
+            &--error {
+                padding: 18px 20px 15px 20px;
+                width: 100%;
+                max-width: 630px;
+                background: rgba(255, 0, 0, 0.5);
+            }
+            &--success {
+                background: rgba(103, 251, 109, 0.5);
+                padding: 0px 21px;
+                .account__status-alert-text {
+                    font-size: 12px;
+                    font-weight: 500;
+                    line-height: 32px;
+                    color: #2E7831;
+                    margin-bottom: 0;
+                }
+            }
             &-title {
                 font-family: "SF Pro Display", "Arial", sans-serif;
                 font-size: 18px;
@@ -215,6 +234,17 @@
                 margin-bottom: 10px;
                 font-weight: 400;
             }
+        }
+        &-button {
+            position: absolute;
+            bottom: 0;
+            background: #FF0099;
+            border-radius: 20px;
+            color: #fff;
+            padding: 0 24px;
+            font-size: 15px;
+            font-weight: 600;
+            line-height: 32px;
         }
         &-list {
             margin-top: 20px;
